# techtp

.github/workflows/: action.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: libtest.cpp  main.cpp  main.h  main_test.cpp
task3/: .gitignore  CMakeLists.txt  main.cpp  main_lib.cpp
task3/include/: buffer.h
task3/src/: CMakeLists.txt  buffer.cpp
task4/: main.py
task4/src/simple_library_01/: functions.py
task4/src/tree_utils_02/: size_tree.py  tree.py
task4/src/weather_03/: weather_wrapper.py
task4/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task4/tests/test_03/: test_weather.py
task5/: Dockerfile
task5/cmake-with-flask/: Dockerfile
